--- a/Wk2Presentation.Rmd
+++ b/Wk2Presentation.Rmd
@@ -101,8 +101,24 @@ options(htmltools.dir.version = FALSE)
 
 # Applications of VIIRS
 
+.pull-left[
+* **Main Applications**: 
+  * Monitors 20 wavelength bands in the visual and infrared portions of the electromagnetic spectrum
+  * Frequency range is 0.4 - 12.49µm
+  * Most bands are visible or near infrared
 
+* **Light Emissions**: 
+  * Entire surface of the earth is captured twice a day between the two satellites.
+  * Generated products range from daily to yearly.
+
+]
 
 ---
 
 # Reflection
+
+---
+
+# References
+
+
