--- a/Wk2Presentation.Rmd
+++ b/Wk2Presentation.Rmd
@@ -11,11 +11,23 @@ output:
       highlightStyle: solarize
       highlightLines: true
       countIncrementalSlides: false
-  
+
 ---
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
+
+library(RefManageR)
+BibOptions(check.entries = FALSE,
+           bib.style = "authoryear",
+           cite.style = "authoryear",
+           style = "markdown",
+           hyperlink = TRUE,
+           dashed = FALSE,
+           no.print.fields=c("doi", "url", "urldate", "issn"))
+myBib <- ReadBib("./Bib.bib", check = FALSE)
+
+library(knitcitations)
 ```
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
@@ -33,8 +45,8 @@ options(htmltools.dir.version = FALSE)
 .pull-left[
 * **Visual Infrared Imaging Radiometer Suite**
 * Owned and operated by NASA and NOAA (National Oceanic and Atmospheric Administration)
-* Collects Environmental Data Records (NOAA, 2013)
-
+* Collects Environmental Data Records -
+`r Citet(myBib, "noaaNOAATechnicalReport2013")`
 * Instrument is on two Satellites 
   * Suomi NPP - Launched 28 October 2011 from Vandenberg Air Force Base
   * NOAA-20 - Launched 10 November 2017 from Vandenberg Air Force Base
@@ -51,13 +63,13 @@ options(htmltools.dir.version = FALSE)
   knitr::include_graphics('img/Night.jpg')
 ```
 
-.center[Composite of Earth at Night (NOAA)]
+.center[Composite of Earth at Night - `r Citet(myBib, "noaaOurEarthNight2012")`]
 
 ```{r, echo = FALSE, out.width='90%', fig.align='center'}
   knitr::include_graphics('img/Suomi.png')
 ```
 
-.center[Suomi NPP Satellite (NASA)]
+.center[Suomi NPP Satellite - `r Citet(myBib, "nasaSuomiNPPNASA")`]
 
 ]
 ---
@@ -79,7 +91,8 @@ options(htmltools.dir.version = FALSE)
   * 750m for other bands
   * Products also resampled to 500m, 1000m, and 5600m for use across larger areas
 
-(USGS)
+`r Citet(myBib, "usgsLPDAACVIIRS")`
+
 ]
 
 .pull-right[
@@ -87,13 +100,13 @@ options(htmltools.dir.version = FALSE)
   knitr::include_graphics('img/Bands.png')
 ```
 
-.center[EM Reflective Bands of VIIRS (NOAA, 2013)\n]
+.center[EM Reflective Bands of VIIRS - `r Citet(myBib, "noaaNOAATechnicalReport2013")`]
 
 ```{r, echo = FALSE, out.width='90%', fig.align='center'}
   knitr::include_graphics('img/Thermalbands.png')
 ```
 
-.center[EM Thermal Bands of VIIRS (NOAA, 2013)]
+.center[EM Thermal Bands of VIIRS - `r Citet(myBib, "noaaNOAATechnicalReport2013")`]
 
 ]
 
@@ -103,7 +116,7 @@ options(htmltools.dir.version = FALSE)
 
 .pull-left[
 **Fire Monitoring**: 
-  * Using VIIRS 375m products for fire detection (Olivia & Schroeder, 2015)
+  * Using VIIRS 375m products for fire detection - `r Citet(myBib, "olivaAssessmentVIIRS375m2015")`
   * M13 Longwave Infrared (3.97-4.13µm) designed to identify fires
   * VIIRS has higher sensitivity to small fires versus other products like Landsat (some dependency on ecosystem type being observed)
   * Twice daily visits to areas of interest is useful for mapping quickly evolving fires
@@ -113,20 +126,21 @@ options(htmltools.dir.version = FALSE)
   knitr::include_graphics('img/Fires2020.jpg')
 ```
 
-.center[Cumulative Fire Intensity for 2020 (NASA)]
+.center[Cumulative Fire Intensity for 2020 - `r Citet(myBib, "nasaSVSActiveFires")`]
 ]
 
 .pull-right[
 
 **Light Emissions**: 
-  * Light Emissions data as a proxy for economic activity? (Mellander et al., 2015)
+  * Light Emissions data as a proxy for economic activity? - `r Citet(myBib, "mellanderNightTimeLightData2015")`
   * Day-Night Band (0.5 - 0.5µm) designed to capture lights from Earth's surface at night
-  * Is often used to measure urban development (Florida, 2008) but can it be applied to estimate the extent of economic activity?
+  * Is often used to measure urban development (`r Citet(myBib, "floridaRiseMegaregion2008a")`) but can it be applied to estimate the extent of economic activity?
 * Mellander et al. attempt to calculate local economic activity in Sweden using light emissions data
   * Find it is a better indicator of urbanisation than economic activity, for which it is more weakly correlated.
 
-* Better tool for estimating population than any daytime datasets (Mellander et al)
+* Better tool for estimating population than any daytime datasets - `r Citet(myBib, "mellanderNightTimeLightData2015")`)
 ]
+
 
 ---
 class: title-slide, top, left, inverse
@@ -141,6 +155,8 @@ text-color: red
 ### The high spectral and temporal resolution with a specific focus on environmental variables makes VIIRS an incredible sensing tool which, in my opinion, often flies under the radar in comparison to the more popular Landsat and Sentinel platforms
 
 ### I'd be particularly interested in seeing how VIIRS can be deployed as a marine monitoring tool and investigate how its ocean colour and sea surface temperature capabilities could be used in climate studies.
+
+Image from `r Citet(myBib, "nasaEOSDISWorldview")`
 
 ---
 
