--- a/Bib.bib
+++ b/Bib.bib
@@ -23,6 +23,7 @@
 	url = {https://science.nasa.gov/mission/suomi-npp/},
 	author = {{NASA}},
 	urldate = {2024-01-18},
+	date = {2024-01-18},
 }
 
 @online{usgsLPDAACVIIRS,
@@ -30,6 +31,7 @@
 	url = {https://lpdaac.usgs.gov/data/get-started-data/collection-overview/missions/s-npp-nasa-viirs-overview/#viirs-spectral-bands},
 	author = {{USGS}},
 	urldate = {2024-01-18},
+	date = {2024-01-18},
 	file = {LP DAAC - VIIRS Overview:/Users/gavinrolls/Zotero/storage/G4MZ4BY6/s-npp-nasa-viirs-overview.html:text/html},
 }
 
@@ -93,6 +95,7 @@
 	url = {https://svs.gsfc.nasa.gov/cgi-bin/details.cgi?aid=4899},
 	author = {{NASA}},
 	urldate = {2024-01-18},
+	date = {2024-01-18},
 	file = {SVS\: Active Fires As Observed by VIIRS, 2020:/Users/gavinrolls/Zotero/storage/5I7JM5EK/details.html:text/html},
 }
 
@@ -102,6 +105,7 @@
 	abstract = {Interactive interface for browsing full-resolution, global, daily satellite images. Supports time-critical application areas such as wildfire management, air quality measurements, and weather forecasting. Data is generally available within three hours of observation.},
 	author = {{NASA}},
 	urldate = {2024-01-18},
+	date = {2024-01-18},
 	langid = {english},
 	file = {Snapshot:/Users/gavinrolls/Zotero/storage/BLWPVVGC/worldview.earthdata.nasa.gov.html:text/html},
 }
